fix blog index color

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -59,7 +59,7 @@ Mix and Connect</strong> with like-minded peers.
         </div>
     </div>
     <div class="index-blog-label">
-      <h3 class="blue"><span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}</h3>
+      <h3><span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}</h3>
     </div>
     <div class="container index-blog">
         <div class="row">
@@ -69,7 +69,7 @@ Mix and Connect</strong> with like-minded peers.
                         <div class="index-blog-item-img">
                             <img src="{{ post.image }}" alt="post image">
                         </div>
-                        <h3>{{ post.title }}</h3>
+                        <h3 class="blue">{{ post.title }}</h3>
                         <p class="index-blog-item-para">{{ post.teaser }}</p>
                     </a>
                 </div>
