--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -394,7 +394,7 @@ address > abbr {
 }
 
 .index-blog-label {
-  padding-top: 30px;
+  padding-top: 40px;
   text-align: center;
 }
 
@@ -405,6 +405,7 @@ address > abbr {
   padding-bottom: 10px;
   padding-left: 5%;
   padding-right: 5%;
+  margin-bottom: 30px;
 }
 
 .index-blog > .row {
