revert index-event:hover decoration

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -477,7 +477,7 @@ address > abbr {
 }
 
 .index-events-content-single:hover {
-
+  text-decoration: none;
 }
 
 .index-events-content-single-name {
