--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -67,12 +67,12 @@ Mix and Connect</strong> with like-minded peers.
                 <div class="col-md-4 col-sm-4 index-blog-item">
                     <a href="{% url 'main:blog_post' post.slug %}" class="index-blog-item-link">
                         <div>
-                          <div class="index-blog-item-img">
-                            <img src="{{ post.image }}" alt="post image">
-                          <div class="text-center">
-                            <h3 class="blue">{{ post.title }}</h3>
-                          </div>
-                          </div>
+                            <div class="index-blog-item-img">
+                                <img src="{{ post.image }}" alt="post image">
+                            </div>
+                            <div class="index-blog-item-title">
+                                <h3 class="blue">{{ post.title }}</h3>
+                            </div>
                         </div>
                       <p class="index-blog-item-para">{{ post.teaser }}</p>
                     </a>
