fix more content

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -28,7 +28,7 @@
                             {{ about_texts.participate_text|safe }}
                         </div>
                     </div>
-                    <button class="accordion" id="space">{% trans 'Coworking space' %}</button>
+                    <button class="accordion" id="space">{% trans 'Space' %}</button>
                      <div class="panel">
                         <div class="panel-inner">
                             {{ about_texts.coworking_text|safe }}
