--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -46,20 +46,21 @@
                 <div class="program-sidebar">
                   <div class="program-sidebar-tabs">
                         <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
-                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_teams' %}">{% trans 'Selected Teams' %}</a></li>
+                            <li class="program-sidebar-tabs-elem active"><a href="{}">{% trans 'About' %}</a></li>
                             <div class="program-sidebar-box">
                               {% blocktrans %}
-                               Τeams are selected through an evaluation process that considers the business sustainability of the proposal they submit. Once selected, they are working with the OK!Thess team towards creating a scalable business model. Each pre-incubation cycle terminates with a DEMO DAY.
+                               Τeams are selected in consideration of the sustainability of their submitted proposal, and physical interviews. Once selected, they enter our Bootcamp and work with OK!Thess team towards creating a scalable business model. Each pre-incubation cycle terminates with a DEMO DAY.
                               {% endblocktrans %}
+                            </div>
+                            <div class="text-right">
+                             <a class="btn-red alt" href="/apply/" role="button">{% trans 'Apply now!' %}</a>
                             </div>
                             <!-- <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li> -->
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
                             <!--<li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team &amp; Partners' %}</a></li>-->
                         </ul>
                     </div>
-                    <div class="text-right">
-                     <a class="btn-red alt" href="/apply/" role="button">{% trans 'Apply now!' %}</a>
-                   </div>
+
                 </div>
             </div>
         </div>
