--- a/main/templates/main/program-alumni.html
+++ b/main/templates/main/program-alumni.html
@@ -40,7 +40,7 @@
                             <div class="text-right">
                              <a class="btn-red alt" href="/apply/" role="button">{% trans 'Apply now!' %}</a>
                             </div>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Selected Teams' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'About' %}</a></li>
                             <!-- <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li> -->
                             <!-- <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team &amp; Partners' %}</a></li> -->
                         </ul>
