auto play index slider

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -123,5 +123,7 @@ Mix and Connect</strong> with like-minded peers.
             }
             x[slideIndex-1].style.display = 'block';
         }
+
+        setInterval(plusDivs, 2000, 1);
     </script>
 {% endblock %}
