--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -10,8 +10,35 @@
         <div class="row">
             <div class="col-md-9">
               <h1>{% trans 'Events at OK!Thess' %}</h1>
-                {% for event in events_list %}
-                    <div class="events-single {% if event.is_old %} events-single-dimmed {% endif %}">
+                {% for event in events_list_future %}
+                    <div class="events-single">
+                        <div class="row">
+                            <div class="col-md-3 text-center">
+                                <a href="{{ event.link }}"><img src="{{ event.image }}"></a>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="events-single-data">
+                                    <div class="events-single-data-time">Time: {{ event.time_start }} to {{ event.time_end }}</div>
+                                    <div class="events-single-data-date">Date: {{ event.date }}</div>
+                                </div>
+                                <div class="events-single-title">
+                                    <a href="{{ event.link }}">{{ event.title }}</a>
+                                </div>
+                                <p class="events-single-para">{{ event.description }}</p>
+                                <div class="events-single-data">
+                                    <div class="events-single-data-organizer">Organized by: {{ event.organizer }}</div>
+                                    <div class="events-single-data-link">
+                                        <a href="{{ event.organizer_link }}" target="_blank">
+                                            More <i class="glyphicon glyphicon-chevron-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                {% for event in events_list_past %}
+                    <div class="events-single events-single-dimmed">
                         <div class="row">
                             <div class="col-md-3 text-center">
                                 <a href="{{ event.link }}"><img src="{{ event.image }}"></a>
