--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -80,7 +80,7 @@
                    </ul>
                 </li>
                 <li class="{% active 'program' %}"><a href="{% url 'main:program_teams' %}">{% trans 'Teams' %}</a></li>
-                <li class="{% active 'event' %}"><a href="{% url 'main:events' %}">{% trans 'Communities' %}</a></li>
+                <li class="{% active 'event' %}"><a href="{% url 'main:events' %}">{% trans 'Meetups' %}</a></li>
                 <li class="{% active 'blog' %}"><a href="{% url 'main:blog' %}">{% trans 'Blog' %}</a></li>
                 <li class="{% active 'contact' %}"><a href="{% url 'main:contact' %}">{% trans 'Contact' %}</a></li>
 	              <li class="navbar-language">
