--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -13,16 +13,14 @@
                 {% for event in events_list %}
                     <div class="events-single {% if event.is_old %} events-single-dimmed {% endif %}">
                         <div class="row">
-                            <div class="col-md-3 text-center">
+                            <div class="col-md-3">
+                              <div class="events-single-data">
                                 <div class="events-single-data-date">Date: {{ event.date }}</div>
                                 <div class="events-single-data-time">Time: {{ event.time_start }} to {{ event.time_end }}</div>
                                 <a href="{{ event.link }}"><img src="{{ event.image }}"></a>
+                              </div>
                             </div>
                             <div class="col-md-9">
-                                <div class="events-single-data">
-
-                                    
-                                </div>
                                 <div class="events-single-title">
                                     <a href="{{ event.link }}">{{ event.title }}</a>
                                 </div>
