--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -15,8 +15,7 @@
                         <div class="row">
                           <div class="col-md-3">
                             <div class="events-single-data">
-                              <div class="events-single-data-date">Date: {{ event.date }}</div>
-                              <div class="events-single-data-time">Time: {{ event.time_start }} to {{ event.time_end }}</div>
+                              <div class="events-single-data-date">Date: {{ event.date }} - {{ event.time_start }}</div>
                               <a href="{{ event.link }}"><img src="{{ event.image }}"></a>
                               <div class="events-single-data-organizer">Organized by: {{ event.organizer }}</div>
                             </div>
