--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -41,11 +41,9 @@
                               {% for partner in partners_list %}
                                   <div class="col-md-4">
                                       <div class="program-main-mentor">
-                                          <a href="{{ partner.website }}" target="_blank">
-                                              <img src="{{ partner.image }}" class="program-main-mentor-image" alt="partner image">
-                                          </a>
+                                        <img src="{{ partner.image }}" class="program-main-mentor-image" alt="partner image">
                                           <div class="program-main-mentor-name">
-                                              <a target="_blank" href="{{ partner.website }}">{{ partner.name }}</a>
+                                            <div>{{ partner.name }}</div>
                                           </div>
                                           <div>{{ partner.title }}</div>
                                           <p>{{ partner.description }}</p>
