--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -9,7 +9,7 @@
     <div class="container-fluid events">
         <div class="row">
             <div class="col-md-9">
-              <h1>{% trans 'Events at OK!Thess' %}</h1>
+              <h1>{% trans 'Meetups at OK!Thess' %}</h1>
                 {% for event in events_list_future %}
                     <div class="events-single">
                         <div class="row">
@@ -68,11 +68,12 @@
                 {% endfor %}
             </div>
             <div class="col-md-3">
-                <h3>{% trans 'Meetups' %}</h3>
+                <h3>{% trans 'About meetups' %}</h3>
                 <div class="program-sidebar-box">
                     <p>{% trans 'Meetings, especially regular meetings of people who share a particular interest such as a programming language or entrepreneurship' %}</p>
                 </div>
                 <div class="sidebar-module sidebar-module-inset sidebar-meetups">
+                <h3>{% trans 'Hosted meetups' %}</h3>
                     <ul>
                         {% for meetup in meetups %}
                             <li><a href="{{ meetup.link }}" target="_blank">{{ meetup.name }}</a><i class="glyphicon glyphicon-chevron-right"></i></a></li>
@@ -85,7 +86,7 @@
                       {% trans 'The meetup of OK!Thess is the new thing in town. Click here to learn more' %}
                   </div>
                 </div>
-                <h3>{% trans 'Past Events' %}</h3>
+                <h3>{% trans 'Past meetups' %}</h3>
                 <div class="sidebar-module">
                     {% for year, year_obj in events_archive.items %}
                         <h5>{{ year }}</h5>
