--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -46,10 +46,10 @@
                 <div class="program-sidebar">
                   <div class="program-sidebar-tabs">
                         <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
-                            <li class="program-sidebar-tabs-elem active"><a href="{}">{% trans 'About' %}</a></li>
+                            <li class="program-sidebar-tabs-elem active"><a href="{}">{% trans 'The program' %}</a></li>
                             <div class="program-sidebar-box">
                               {% blocktrans %}
-                               Τeams are selected in consideration of the sustainability of their submitted proposal, and physical interviews. Once selected, they enter our Bootcamp and work with OK!Thess team towards creating a scalable business model. Each pre-incubation cycle terminates with a DEMO DAY.
+                               Τeams are selected in consideration of the sustainability of their submitted proposal, and physical interviews. Once selected, they enter our 3-month program starting with a Bootcamp where they all get at the same page. Thereafter teams are asigned an OK!Thess coach to work towards creating a scalable business model. Each cycle terminates with a DEMO DAY.
                               {% endblocktrans %}
                             </div>
                             <div class="text-right">
