--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,12 +5,14 @@
 
 {% block content %}
     <div class="container index-land">
-        <row>
-          <p>{% trans 'Do you need help on executing your business idea?' %}</p>
-          <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button">
+        <row id="cta">
+          <p class="text-muted"><strong>{% trans 'Do you need help on executing your business idea?' %}</strong></p>
+          <div>
+            <a class="btn-red" href="{% url 'main:apply' %}" role="button">
               <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans "<strong>Apply</strong> for Winter '18" %}
-          </a>
-          <p>{% trans 'Want more information? Read about OK!Thess here' %}</p>
+            </a>
+            <p id="more">{% trans 'Want more information? Read about OK!Thess here' %}</p>
+          </div>
         </row>
         <div class="row">
             <div class="col-md-5">
@@ -24,6 +26,7 @@
                       Mix and Connect</strong> with like-minded peers.
                       {% endblocktrans %}
                     </p>
+                    <p>{% trans 'Subscribe to get our updates' %}</p>
                     <div id="mc_embed_signup">
                         <form action="//okthess.us15.list-manage.com/subscribe/post?u=e5030558dd0a4f89aeed05a0d&amp;id=a3d8e08f2a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
