comment out slider arrow right at index

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -18,7 +18,7 @@
                       {% endblocktrans %}
                     </p>
                     <br>
-                    <p class="text-muted"> {% trans 'Subscribe to get our updates.' %}
+                    <p class="text-muted"> {% trans 'Subscribe to get our updates!' %}
                     <div id="mc_embed_signup">
                         <form action="//okthess.us15.list-manage.com/subscribe/post?u=e5030558dd0a4f89aeed05a0d&amp;id=a3d8e08f2a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
@@ -42,9 +42,9 @@
                 </div>
             </div>
             <div class="col-md-7">
-                <div onclick="plusDivs(1)" class="slider-arrow-right">
+                <!--<div onclick="plusDivs(1)" class="slider-arrow-right">
                     <i class="glyphicon glyphicon-chevron-right"></i>
-                </div>
+                </div>-->
                 <div class="slider">
                     <img src="{% static '/main/img/slider-1.jpg' %}" class="slider-img">
                     <div class="slider-text">{% trans 'Open Workshops' %}</div>
