--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -922,6 +922,10 @@ button.accordion.active:after {
   color: #000;
 }
 
+.sidebar-module-inset ul li a:hover {
+  color: #cacaca;
+}
+
 .sidebar-module-inset .sidebar-meetups ul li a {
   font-size: 14px;
   text-decoration: none;
