--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -43,9 +43,9 @@
                         <div class="row">
                           <div class="col-md-3">
                             <div class="events-single-data">
-                              <div class="events-single-data-date">Date: {{ event.date }} - {{ event.time_start }}</div>
+                              <div class="row events-single-data-date">Date: {{ event.date }} - {{ event.time_start }}</div>
                               <a href="{{ event.link }}"><img src="{{ event.image }}"></a>
-                              <div class="events-single-data-organizer">Organized by: {{ event.organizer }}</div>
+                              <div class="row events-single-data-organizer">Organized by: {{ event.organizer }}</div>
                             </div>
                           </div>
                           <div class="col-md-9">
