fix event data for smaller devices

--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -44,7 +44,7 @@
                           <div class="col-md-3">
                             <div class="events-single-data">
                               <div class="row events-single-data-date">Date: {{ event.date }} - {{ event.time_start }}</div>
-                              <a href="{{ event.link }}"><img src="{{ event.image }}"></a>
+                              <div class="row"><a href="{{ event.link }}"><img src="{{ event.image }}"></a></div>
                               <div class="row events-single-data-organizer">Organized by: {{ event.organizer }}</div>
                             </div>
                           </div>
