--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -922,7 +922,7 @@ button.accordion.active:after {
   color: #000;
 }
 
-.sidebar-module-inset > .glyphicon-chevron-right {
+.sidebar-module .sidebar-module-inset .sidebar-meetups .glyphicon-chevron-right {
   color: #f9d94f;
 }
 
