fix event more link

--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -56,7 +56,7 @@
                               <div class="events-single-data">
 
                                   <div class="events-single-data-link">
-                                      <a href="{{ event.organizer_link }}" target="_blank">
+                                      <a class="btn btn-yellow" href="{{ event.organizer_link }}" target="_blank">
                                           More <i class="glyphicon glyphicon-chevron-right"></i>
                                       </a>
                                   </div>
