--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -91,7 +91,7 @@ address > abbr {
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-  background-color: #e7e7e7;
+  background-color: #f9f9f9;
 }
 
 .navbar-default .navbar-nav > li.active > a {
@@ -112,7 +112,7 @@ address > abbr {
 }
 
 .dropdown-menu > li > a:hover {
-  background-color: #e7e7e7;
+  background-color: #f9f9f9;
 }
 
 .navbar-default .navbar-nav > .open > a {
