finalize navbar hover

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -116,7 +116,7 @@ address > abbr {
 }
 
 .navbar-default .navbar-nav > .open > a {
-  background-color: #e7e7e7;
+  background-color: #f9f9f9;
 }
 
 .navbar-default .navbar-nav > .open > a:focus {
