--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -45,6 +45,15 @@ h3 {
   box-shadow: rgba(255, 255, 255, 0.4) 0 0px 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
 }
 
+h3.index {
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 600;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.4) 0 0px 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  -moz-box-shadow: rgba(255, 255, 255, 0.4) 0 0px 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  box-shadow: rgba(255, 255, 255, 0.4) 0 0px 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+}
+
 h4 {
   display: inline-block;
   font-size: 16px;
