--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -68,16 +68,12 @@
             {% for post in featured_posts_list %}
                 <div class="col-md-4 col-sm-4 index-blog-item">
                     <a href="{% url 'main:blog_post' post.slug %}" class="index-blog-item-link">
-                      <div>
                       <div class="index-blog-item-title">
-                          <h4 class="blue">{{ post.title }}</h3>
+                          <h3 class="index">{{ post.title }}</h3>
                       </div>
-
-                            <div class="index-blog-item-img">
-                                <img src="{{ post.image }}" alt="post image">
-                            </div>
-
-                        </div>
+                      <div class="index-blog-item-img">
+                          <img src="{{ post.image }}" alt="post image">
+                      </div>
                       <p class="index-blog-item-para">{{ post.teaser }}</p>
                     </a>
                 </div>
