finally fix color at index blog

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -409,6 +409,11 @@ address > abbr {
   text-align: center;
 }
 
+.index-blog-item-link {
+  color: #000;
+  text-decoration: none;
+}
+
 .index-blog-item-link:hover {
   color: #000;
   text-decoration: none;
