--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="index-blog-label">
-      <h3><span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}</h3>
+      <h3 class="title"><span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}</h3>
     </div>
     <div class="container index-blog">
         <div class="row">
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="index-events-label">
-      <h3><span class="glyphicon glyphicon-calendar"></span>{% trans 'Upcoming Community <strong>Meetups</strong>' %}</h3>
+      <h3 class="title"><span class="glyphicon glyphicon-calendar"></span>{% trans 'Upcoming Community <strong>Meetups</strong>' %}</h3>
     </div>
     <div class="container index-events">
         <div class="row">
