--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -12,7 +12,7 @@
               <h1>{% trans 'Latest News' %}</h1>
                 {% for post in posts_list %}
                     <div class="blog-post">
-                        <div class="col-md-3">
+                        <div class="col-md-3 image">
                             <img class="blog-post-image" src="{{ post.image }}">
                         </div>
                         <div class="col-md-9">
@@ -35,7 +35,7 @@
                         {% for resource in resources_list %}
                             <li><a href="{{ resource.url }}" target="_blank">{{ resource.title }} <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         {% endfor %}
-                        <li><a href="{% url 'main:resources' %}"><strong>See all resources</strong> <i class="glyphicon glyphicon-chevron-right"></i></a></li>
+                        <!--<li><a href="{% url 'main:resources' %}"><strong>See all resources</strong> <i class="glyphicon glyphicon-chevron-right"></i></a></li>-->
                     </ul>
                 </div>
                 <div class="sidebar-module">
