--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -15,9 +15,9 @@
                         <div class="row">
                           <div class="col-md-3">
                             <div class="events-single-data">
-                              <div class="events-single-data-date">Date: {{ event.date }} - {{ event.time_start }}</div>
-                              <a href="{{ event.link }}"><img src="{{ event.image }}"></a>
-                              <div class="events-single-data-organizer">Organized by: {{ event.organizer }}</div>
+                              <div class="row events-single-data-date">{{ event.date }} - {{ event.time_start }}</div>
+                              <div class="row"><a href="{{ event.link }}"><img src="{{ event.image }}"></a></div>
+                              <div class="row events-single-data-organizer">Organized by: {{ event.organizer }}</div>
                             </div>
                           </div>
                           <div class="col-md-9">
@@ -26,7 +26,6 @@
                               </div>
                               <p class="events-single-para">{{ event.description }}</p>
                               <div class="events-single-data">
-
                                   <div class="events-single-data-link">
                                       <a href="{{ event.organizer_link }}" target="_blank">
                                           More <i class="glyphicon glyphicon-chevron-right"></i>
@@ -43,7 +42,7 @@
                         <div class="row">
                           <div class="col-md-3">
                             <div class="events-single-data">
-                              <div class="row events-single-data-date">Date: {{ event.date }} - {{ event.time_start }}</div>
+                              <div class="row events-single-data-date">{{ event.date }} - {{ event.time_start }}</div>
                               <div class="row"><a href="{{ event.link }}"><img src="{{ event.image }}"></a></div>
                               <div class="row events-single-data-organizer">Organized by: {{ event.organizer }}</div>
                             </div>
@@ -54,12 +53,11 @@
                               </div>
                               <p class="events-single-para">{{ event.description }}</p>
                               <div class="events-single-data">
-
-                                  <div class="events-single-data-link">
-                                      <a class="btn btn-yellow" href="{{ event.organizer_link }}" target="_blank">
-                                          More <i class="glyphicon glyphicon-chevron-right"></i>
-                                      </a>
-                                  </div>
+                                <div class="events-single-data-link">
+                                    <a href="{{ event.organizer_link }}" target="_blank">
+                                        More <i class="glyphicon glyphicon-chevron-right"></i>
+                                    </a>
+                                </div>
                               </div>
                           </div>
                         </div>
@@ -70,24 +68,24 @@
             <div class="col-md-3">
                 <h3>{% trans 'About meetups' %}</h3>
                 <div class="program-sidebar-box">
-                    <p>{% trans 'Meetings, especially regular meetings of people who share a particular interest such as a programming language or entrepreneurship' %}</p>
+                  <p>{% trans 'Meetings, especially regular meetings of people who share a particular interest such as a programming language or entrepreneurship' %}</p>
                 </div>
-                <h2>{% trans 'Hosted meetups' %}</h2>
-                <div class="sidebar-module sidebar-module-inset sidebar-meetups">
-                    <ul>
-                        {% for meetup in meetups %}
-                            <li><a href="{{ meetup.link }}" target="_blank">{{ meetup.name }} </a><i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="program-sidebar-meetup">
+                <!--<div class="program-sidebar-meetup">
                   <h3 class="yellow">OK!Thess Meetup <i class="glyphicon glyphicon-circle-arrow-right"></i></h3>
                   <div class="program-sidebar-box">
-                      <p>{% trans 'The meetup of OK!Thess is the new thing in town. Click here to learn more' %}</p>
+                    <p>{% trans 'The meetup of OK!Thess is the new thing in town. Click here to learn more' %}</p>
                   </div>
                   <a class="btn-blue" href="{% url 'main:blog_post' post.slug %}" role="button">
-                      <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans '<strong>Read</strong> more »' %}
+                    <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans '<strong>Read</strong> more »' %}
                   </a>
+                </div>-->
+                <h2>{% trans 'Hosted meetups' %}</h2>
+                <div class="sidebar-module sidebar-module-inset sidebar-meetups">
+                  <ul>
+                    {% for meetup in meetups %}
+                      <li><a href="{{ meetup.link }}" target="_blank">{{ meetup.name }} </a><i class="glyphicon glyphicon-chevron-right"></i></a></li>
+                    {% endfor %}
+                  </ul>
                 </div>
                 <h3>{% trans 'Past meetups' %}</h3>
                 <div class="sidebar-module">
