add display attribute to events-para

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -786,6 +786,7 @@ ul.share-buttons img{
 }
 
 .events-single-para {
+  display: inline-block;
   font-size: 12px;
   height: 72px;
   margin-bottom: 14px;
