--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -18,12 +18,26 @@
                     </p>
                 {% endif %}
                 {% blocktrans %}
+                <h2>The application process</h2>
                 <p>We accept at any time submissions from individuals or groups with innovative ideas, regardless their stage, who would like to benefit from the services of the OK!Thess pre-incubator in order to set up a startup business or accelarate the one that they already have set up.</p>
                 <p>Proposals shall be evaluated at regular intervals, the exact dates are being announced on this website.</p>
-                <p>The current submission period closes on September the 13th 2017. Results will be announced on September the 19th 2017. The incubation period starts with a compulsory bootcamp that starts on the 2nd and lasts until the 13th of October.</p>
+                <p>The current submission period closes on December the 31st 2017. Results will be announced on January the 15th. The incubation period starts with a <strong>compulsory bootcamp</strong> that initiates on the 22nd January and lasts until the 22nd of February.</p>
+                <p>Bootcamp is comprised of an extended weekend that starts on Friday morning and ends on Monday night. Thereafter a series of 8-10 Masterclasses take place each Tuesday and Thursday evening.</p>
+                <p>Masterclasses are set to facilitate the business visualisation for participants of any level and include but are not limited to the following themes:</p>
+                  <ul>
+                    <li>Incorporating a business - Accounting</li>
+                    <li>Market research</li>
+                    <li>Negotiations</li>
+                    <li>IPR and Legal</li>
+                    <li>Digital marketing</li>
+                    <li>Branding</li>
+                    <li>Investment readiness</li>
+                  </ul>
                 <p>To participate, you either fill in the following form, or just answer the questions in the body of an e-mail and send it to <strong>apply@okthess.gr</strong></p>
                 {% endblocktrans %}
+                <br>
                 <a class="btn-apply" href="http://ntemposd.me/" target="_blank">{% trans 'Information - GR' %}</a><a class="btn-apply" href="http://ntemposd.me/" target="_blank">{% trans '<nobr>Internal Regulation</nobr>' %}</a>
+                <br><br>
                 <p>{{ application_content|safe }}</p>
                 <h3>{% trans 'Application form' %}</h3>
                 <br>
