--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,7 +11,7 @@
                     <h1>ΟΚ!Τhess</h1>
                     <h2>{% trans 'Your early stage partner' %}</h2>
                     <p class="desc">
-                      {% blocktrans %}Do you need help on executing your business idea? OK!Thess provides space and technical support to teams of people
+                      {% blocktrans %}OK!Thess provides space and and a technical support program for teams of people
                       with innovative ideas helping them to <strong>Validate a Business
                       Model Fast</strong>, and to <strong>Meet,
                       Mix and Connect</strong> with like-minded peers.
@@ -47,15 +47,15 @@
                 </div>-->
                 <div class="slider">
                     <img src="{% static '/main/img/slider-1.jpg' %}" class="slider-img">
-                    <div class="slider-text">{% trans 'Open Workshops' %}</div>
+                    <div class="slider-text">{% trans 'Workshops' %}</div>
                 </div>
                 <div class="slider">
                     <img src="{% static '/main/img/slider-2.jpg' %}" class="slider-img">
-                    <div class="slider-text">{% trans 'Community Events' %}</div>
+                    <div class="slider-text">{% trans 'Events' %}</div>
                 </div>
                 <div class="slider">
                     <img src="{% static '/main/img/slider-3.jpg' %}" class="slider-img">
-                    <div class="slider-text">{% trans 'Mentoring Sessions' %}</div>
+                    <div class="slider-text">{% trans 'Mentoring' %}</div>
                 </div>
             </div>
         </div>
